kustomize/infisical-stack/infisical-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "false"
  name: infisical-standalone
  namespace: infisical
spec:
  ingressClassName: nginx
  rules:
  - host: cofre.vinicima.com
    http:
      paths:
      - backend:
          service:
            name: infisical-server-infisical-standalone-infisical
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: infisical-server-infisical-standalone-infisical
            port:
              number: 8080
        path: /ss-webhook
        pathType: Exact
  - host: cofre-k8s.vinicima.com
    http:
      paths:
      - backend:
          service:
            name: infisical-server-infisical-standalone-infisical
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: infisical-server-infisical-standalone-infisical
            port:
              number: 8080
        path: /ss-webhook
        pathType: Exact
  tls:
  - hosts:
    - cofre.vinicima.com
    - cofre-k8s.vinicima.com
    secretName: vinicima-com-tls
